Bug 218983 - [kdm + consolekit problem] auto logon does not work
Summary: [kdm + consolekit problem] auto logon does not work
Status: RESOLVED FIXED
Alias: None
Product: kdm
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdm bugs tracker
URL:
Keywords:
: 235605 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-16 21:44 UTC by felix
Modified: 2010-04-29 00:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description felix 2009-12-16 21:44:58 UTC
Version:            (using KDE 4.3.4)
OS:                Linux
Installed from:    Ubuntu Packages

KDM does not always log me in automatically. From time to time it works but most of the time i see the normal login mask. 

I'm using  Kubuntu Lucid Lynx. This happens since about 1-2 weeks.

Nothing more to say i think :)
Comment 1 Oswald Buddenhagen 2009-12-17 09:27:03 UTC
i deem it much more likely that the kde session just immediately creashes. check the timestamp of ~/.xsession-errors and have a look at daemon.log and kdm.log in /var/log.
Comment 2 felix 2009-12-17 16:16:47 UTC
You might be right:

daemon.log

Dec 17 06:34:12 laptop kdm: :0[2058]: Cannot open ConsoleKit session: Unable to open session: Method "OpenSessionWithParameters" with signature "a(sv)" on interface "org.freedesktop.ConsoleKit.Manager" doesn't exist
Dec 17 06:34:12 laptop kdm: :0[2058]: Client start failed
Dec 17 06:34:12 laptop kdm: :0[2058]: Cannot close ConsoleKit session: Unable to close session: no session open

IS this bug a duplicate of something else?
Comment 3 Oswald Buddenhagen 2009-12-17 16:25:16 UTC
blah, that's kdm's slightly broken consolekit integration. i'm aware of bugs in that area, but i don't remember whether they are filed on bugzilla.
Comment 4 Oswald Buddenhagen 2010-02-21 12:00:07 UTC
SVN commit 1093647 by ossi:

make ConsoleKit failure non-fatal

libck-connector sucks at error reporting, so we cannot tell whether no
ck daemon is running (which would be kinda fine) or whether talking with
it failed (which would be a bit worse). so choose the less disruptive
whole-sale solution.

BUG: 218983

 M  +9 -2      client.c  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1093647
Comment 5 Oswald Buddenhagen 2010-04-29 00:56:36 UTC
*** Bug 235605 has been marked as a duplicate of this bug. ***