make ConsoleKit failure non-fatal

libck-connector sucks at error reporting, so we cannot tell whether no
ck daemon is running (which would be kinda fine) or whether talking with
it failed (which would be a bit worse). so choose the less disruptive
whole-sale solution.

BUG: 218983

svn path=/trunk/KDE/kdebase/workspace/; revision=1093647